2019-04-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rcirc.el: rewrote all comments and some docstrings.

	* eev-rcirc.el (ee-irc-channel-around-point): commented out.
	(ee-buffer-freenode-channel-name): commented out.

2019-04-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eval-intro): new sections: "10.1.
	Byte-compiled functions", "10.2. How `find-efunction' works", and
	"10.3. Why eev avoids byte-compilation".

	* eev-blinks.el (find-eloadhistory0, find-eloadhistory): new
	functions.

2019-04-09  Eduardo Ochs  <eduardoochs@gmail.com>

	* eejump.el, eev-anchors.el, eev-audiovideo.el, eev-beginner.el,
	eev-blinks.el, eev-brxxx.el, eev-channels.el, eev-code.el,
	eev-codings.el, eev-edit.el, eev-elinks.el, eev-env.el,
	eev-eval.el, eev-flash.el, eev-intro.el, eev-load.el, eev-mode.el,
	eev-multiwindow.el, eev-pdflike.el, eev-plinks.el,
	eev-prepared.el, eev-rcirc.el, eev-readme.el, eev-template0.el,
	eev-tlinks.el, eev.el, eev2-all.el: fixed the copyright years to a
	single range and rewrote the "(not yet?) part of GNU eev" to "part
	of GNU eev".

2019-04-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev.el: new file.

	* .gitignore: new file.

	* eev-anchors.el (ee-anchor-format): autoload its status as as
	safe local variable.

2019-04-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-install-intro): added an explanation of
	why eev is not in ELPA yet.

	* eev-load.el: added an explanation of why we have so few
	autoloads.

2019-04-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike-old.el: deleted this file.

	* README: added a section "eev without eev-mode".

	* eev-intro.el (find-eev-intro): small changes.
	(find-eev-install-intro): small changes.

	* eev-code.el (ee-code-c-d-pairs): fixed the comments.

	* eev-elinks.el: Cleaned up the comments about
	`ee-code-c-d-filter-2' and related functions.

2019-03-29  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-template0.el: new file.
